manifests/users-db-total.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: users-mongo
  labels:
    app: acmefit
    service: users-mongo
spec:
  ports:
    - port: 27017
      name: mongo-users
      protocol: TCP
  selector:
    app: acmefit
    service: users-mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mongo
  labels:
    app: acmefit
    service: users-mongo
spec:
  selector:
    matchLabels:
      app: acmefit  # has to match .spec.template.metadata.labels
      service: users-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit  # has to match .spec.selector.matchLabels
        service: users-mongo
    spec:
      containers:
        - name: users-mongo
          image: mongo:4
          resources:
            {}
          ports:
            - name: users-mongo
              containerPort: 27017
              protocol: "TCP"
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
            - mountPath: /docker-entrypoint-initdb.d
              name: mongo-initdb
      volumes:
        - name: mongodata
          emptyDir: {}
        - name: mongo-initdb
          configMap:
            name: users-initdb-config
#        - name: mongodata
#          persistentVolumeClaim:
#            claimName: mongodata
