manifests/point-of-sales-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: pos
  labels:
    app: acmefit
    service: pos
spec:
  ports:
    - name: http-pos
      protocol: TCP
      port: 7777
      targetPort: 7777
  selector:
    app: acmefit
    service: pos
  type: ClusterIP
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: pos
  labels:
    app: acmefit
    service: pos
spec:
  selector:
    matchLabels:
      app: acmefit
      service: pos
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: pos
    spec:
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-pos:v0.1.0-beta
        name: pos
        ports:
        - containerPort: 7777
          name: pos
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-contour-cluster-issuer
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
  labels:
    app: acmefit
    service: pos
  name: pos
spec:
  rules:
  - host: pos.shortrib.app
    http:
      paths:
      - backend:
          service:
            name: pos
            port:
              number: 7777
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - acme-fitness.shortrib.app
    secretName: pos-cert
